--- a/SpringAuth-CRUD-API/src/main/resources/application.properties
+++ b/SpringAuth-CRUD-API/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=SpringAuth-CRUD-API
 # Database Config
-spring.datasource.url=jdbc:mysql://localhost:3306/springauth_db
+spring.datasource.url=jdbc:mysql://localhost:3306/jwtdb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
-
-# JPA Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# JWT secret and expiration (example - in prod keep secret outside code!)
+jwt.secret=ReplaceThisWithAStrongSecretKeyOfYourChoice
+jwt.expiration-ms=3600000
 
 # Server Port (Optional)
-server.port=8080
+server.port=8081
